--- a/apps/web/src/app/public-profile/[id]/[[...slug]]/page.module.css
+++ b/apps/web/src/app/public-profile/[id]/[[...slug]]/page.module.css
@@ -95,7 +95,7 @@
   }
 
   .bottomSpacer {
-    height: 121px; /* 65px CTA bar + 56px bottom nav bar */
+    height: 120px; /* 65px CTA bar + 56px bottom nav bar */
   }
 }
 
@@ -118,7 +118,7 @@
   }
 
   .bottomSpacer {
-    height: 121px; /* 65px CTA bar + 56px bottom nav bar */
+    height: 120px; /* 65px CTA bar + 56px bottom nav bar */
   }
 }
 
